@@ -2559,10 +2559,11 @@ static void PSFileHeader(FILE *fp,
 	    left, bottom, right, top);
     fprintf(fp, "%%%%EndComments\n");
     fprintf(fp, "%%%%BeginProlog\n");
+    fprintf(fp,  "/bp  { gs");
+    if (streql(pd->colormodel, "rgb-nogray")) fprintf(fp,  " sRGB");
     if (landscape)
-	fprintf(fp, "/bp  { gs %.2f 0 translate 90 rotate gs } def\n", paperwidth);
-    else
-	fprintf(fp, "/bp  { gs gs } def\n");
+	fprintf(fp, " %.2f 0 translate 90 rotate", paperwidth);
+    fprintf(fp, " gs } def\n");
     prolog = findVar(install(".ps.prolog"), R_GlobalEnv);
     if(prolog == R_UnboundValue) {
 	/* if no object is visible, look in the graphics namespace */
@@ -2581,7 +2582,11 @@ static void PSFileHeader(FILE *fp,
     for (i = 0; i < length(prolog); i++)
 	fprintf(fp, "%s\n", CHAR(STRING_ELT(prolog, i)));
     fprintf(fp, "%% end   .ps.prolog\n");
-    PSEncodeFonts(fp, pd);
+     if (streql(pd->colormodel, "rgb"))
+	fprintf(fp, "/srgb { sRGB setcolor } bind def\n");
+    else if (streql(pd->colormodel, "rgb-nogray"))
+	fprintf(fp, "/srgb { setcolor } bind def\n");
+   PSEncodeFonts(fp, pd);
 
     fprintf(fp, "%%%%EndProlog\n");
 }
@@ -3922,7 +3927,7 @@ static void PS_imagedata(rcolorPtr raster,
      * End-of-data signalled by a '>'
      */
     int i;
-    for (i=0; i<w*h; i++) {
+    for (i = 0; i < w*h; i++) {
 	fprintf(pd->psfp, "%02x", R_RED(raster[i]));
 	fprintf(pd->psfp, "%02x", R_GREEN(raster[i]));
 	fprintf(pd->psfp, "%02x", R_BLUE(raster[i]));
@@ -3946,13 +3951,13 @@ static void PS_writeRaster(unsigned int *raster, int w, int h,
     /* Save graphics state */
     fprintf(pd->psfp,
 	    "gsave\n");
+    /* set the colour space */
+    if (streql(pd->colormodel, "rgb")) fprintf(pd->psfp, "sRGB\n");
     /* translate */
-    fprintf(pd->psfp,
-	    "%.2f %.2f translate\n",
-	    x, y);
+    fprintf(pd->psfp, "%.2f %.2f translate\n", x, y);
     /* rotate */
-    fprintf(pd->psfp,
-	    "%.2f rotate\n", rot);
+    if (rot != 0.0)
+	fprintf(pd->psfp, "%.2f rotate\n", rot);
     /* scale */
     fprintf(pd->psfp,
 	    "%.2f %.2f scale\n",
@@ -3961,7 +3966,7 @@ static void PS_writeRaster(unsigned int *raster, int w, int h,
     /* Image characteristics */
     /* width height bitspercomponent matrix */
     fprintf(pd->psfp,
-	    "  %d %d 8 [%d 0 0 %d 0 %d]\n",
+	    "%d %d 8 [%d 0 0 %d 0 %d]\n",
 	    w, h, w, -h, h);
     /* Begin image data */
     fprintf(pd->psfp, "{<\n");
@@ -3969,6 +3974,7 @@ static void PS_writeRaster(unsigned int *raster, int w, int h,
     PS_imagedata(raster, w, h, pd);
     /* End image */
     fprintf(pd->psfp, "\n>}\n");
+    /* single source, 3 components (interleaved) */
     fprintf(pd->psfp, "false 3 colorimage\n");
     /* Restore graphics state */
     fprintf(pd->psfp,
@@ -5646,7 +5652,7 @@ static void writeRasterXObject(rasterImage raster, int n,
     fprintf(pd->pdffp, "  /Subtype /Image\n");
     fprintf(pd->pdffp, "  /Width %d\n", raster.w);
     fprintf(pd->pdffp, "  /Height %d\n", raster.h);
-    if (streql(pd->colormodel, "srgb"))
+    if (streql(pd->colormodel, "rgb"))
 	fprintf(pd->pdffp, "  /ColorSpace 5 0 R\n"); /* sRGB */
     else
 	fprintf(pd->pdffp, "  /ColorSpace /DeviceRGB\n");
